fixed z-index issue with delete modal in desktop view

--- a/react-interactive-comments-section/src/Components/DeleteModal.scss
+++ b/react-interactive-comments-section/src/Components/DeleteModal.scss
@@ -22,6 +22,7 @@ $white: hsl(0, 0%, 100%);
   right: 0;
   bottom: 0;
   position: fixed;
+  z-index: 1;
 }
 
 .overlay {
